# Hybrid-DV-HDR-GUI

./: .gitignore  README.md  RELEASE.md  eslint.config.js  git-log-oneline.txt  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
.github/workflows/: release.yml
Python files/: hybrid.py  script.py
scripts/: build_msi.bat
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  downloads.rs  events.rs  main.rs  models.rs  paths.rs  pipeline.rs  processing.rs  state.rs  types.rs  utils.rs
src/components/HybridDVHDR/: ConsoleLog.tsx  FileInput.tsx  FileQueue.tsx  HybridDVHDRTool.tsx  ProcessingSteps.tsx  ToolSettings.tsx  index.ts  types.ts
src/components/ui/: sonner.tsx
src/lib/: tauri.ts
src/pages/: Index.tsx
