[package]
name = "hybrid-dv-hdr"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
regex = "1.10"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.6", features = [ "dialog-save", "dialog-open"] }
zip = "0.6"
sevenz-rust = "0.5"

[features]
custom-protocol = ["tauri/custom-protocol"]
