[package]
name = "hybrid-dv-hdr"
version = "1.4.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.6", features = [ "dialog-save", "dialog-open", "shell-open", "dialog-message"] }
reqwest = { version = "0.11", features = ["blocking", "stream"] }
tokio = { version = "1", features = ["full"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
